--- a/index.html
+++ b/index.html
@@ -20,31 +20,30 @@
 
 <body class="scroll-container">
 	<header>
-    <h1>Nom du corpus</h1>
+    <h1>TIRAGE NUMÉRIQUE</h1>
     <p class="premier" id="test">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed egestas risus, nec efficitur odio. Morbi nec auctor sem. Pellentesque imperdiet euismod risus, quis consequat libero ullamcorper lacinia. In tincidunt nisi ut tempor porttitor. Morbi vehicula vitae turpis at facilisis. Integer at tempor purus. Nullam consequat nisi enim, quis sodales metus hendrerit nec. Donec ullamcorper sapien quis lobortis tempor. Nam vestibulum laoreet magna, id pellentesque justo volutpat ac. Phasellus arcu nisl, aliquam sed lectus vel, mattis dapibus arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum eu nisl eget eros porta tempus.
+      En partant d’images d’archives d’un tarot égyptien de 1890, j’ai voulu me pencher sur différentes manière de mélanger l’image par le biais du numérique. A la même manière que dans les cartes à jouer, différentes images se combinent et s’incorporent dans des expérimentations. Dans le tarot, les combinaisons de cartes possèdent un sens, ou permettent une évolution dans la lecture divinatoire. Je souhaitais incorporer subtilement le sens des cartes, faire ressortir leurs significations par le biais de différents effets. La carte de la mort, qui est l’unique carte qui ne se mélange pas aux autres, représente dans le tarot à la fois le début et la fin d’un cycle. J’ai voulu accentuer ce sens en la plaçant au début et à la fin des mes expériences pour donner l’idée d’un récit qui s’ouvre et se ferme. 
     </p>
      <br>
-       <h2>sources :</h2>
+     <br>
+     <br>
+       <h2>SOURCE :</h2>
        <p>
-        source 1 : https://gallica.bnf.fr/ark:/12148/btv1b105431874<br>
+        https://gallica.bnf.fr/ark:/12148/btv1b105431874<br>
        </p>
   </header>
-  <video class="fullPage" autoplay="true" muted="true" src="video/12.mov" loop="true"></video>
-  <video class="hoverPlay" autoplay="true" muted="true" src="video/4.mov" loop="true"></video>
-  <video class="fullPage" autoplay="true" muted="true" src="video/11.mov" loop="true"></video>
-  <video autoplay="true" muted="true" src="video/7.mov" loop="true"></video>
-  <video class="fullPage" autoplay="true" muted="true" src="video/5.mov" loop="true"></video>
-  <aside>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed egestas risus, nec efficitur odio. Morbi nec auctor sem. Pellentesque imperdiet euismod risus, quis consequat libero ullamcorper lacinia. In tincidunt nisi ut tempor porttitor. Morbi vehicula vitae turpis at facilisis. Integer at tempor purus. Nullam consequat nisi enim, quis sodales metus hendrerit nec. Donec ullamcorper sapien quis lobortis tempor. Nam vestibulum laoreet magna, id pellentesque justo volutpat ac. Phasellus arcu nisl, aliquam sed lectus vel, mattis dapibus arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum eu nisl eget eros porta tempus.
-</aside>
-  <video autoplay="true" muted="true" src="video/1.mov" loop="true"></video>
-  <video autoplay="true" muted="true" src="video/2.mov" loop="true"></video>
-  <video autoplay="true" muted="true" src="video/8.mov" loop="true"></video>
-  <video class="fullPage" autoplay="true" muted="true" src="video/9.mov" loop="true"></video>
-  <video autoplay="true" muted="true" src="video/10.mov" loop="true"></video>
+  <video class="fullPage" autoplay="true" muted="true" src="video/4.mov" loop="true"></video>
   <video autoplay="true" muted="true" src="video/6.mov" loop="true"></video>
+  <video autoplay="true" muted="true" src="video/5.mov" loop="true"></video>
+  <video autoplay="true" muted="true" src="video/1.mov" loop="true"></video>
+  <video class="fullPage" autoplay="true" muted="true" src="video/7.mov" loop="true"></video>
+  <video autoplay="true" muted="true" src="video/11.mov" loop="true"></video>
+  <video autoplay="true" muted="true" src="video/10.mov" loop="true"></video>
   <video autoplay="true" muted="true" src="video/3.mov" loop="true"></video>
+  <video class="fullPage" autoplay="true" muted="true" src="video/9.mov" loop="true"></video>
+  <video autoplay="true" muted="true" src="video/12.mov" loop="true"></video>
+  <video autoplay="true" muted="true" src="video/8.mov" loop="true"></video>
+  <video class="fullPage" autoplay="true" muted="true" src="video/2.mov" loop="true"></video>
 </body>
   
 </html>
